# nn_monitor_server

./: .gitignore  API.md  CLAUDE.md  README.md  SCHEMA.md  main.py  requirements.txt  test_client.py  test_pydantic_models.py
Python/: TODO  (+2 more)
Rust/: .gitignore  API.md  CONFIGURATION.md  Cargo.toml  PERFORMANCE.md  README.md  SCHEMA.md  test_client_brutal.py  test_client_comprehensive.py
Rust/.sisyphus/: boulder.json
Rust/.sisyphus/evidence/: task-1-add-metrics.txt  task-1-tests.txt  task-1-warnings.txt  task-14-cargo-check.txt  task-14-cargo-test.txt  task-14-now-iso.txt  task-14-println.txt  task-14-readme.txt  task-14-release-build.txt  task-14-smoke-test.txt  task-2-cors-feature.txt  task-2-dedup.txt  task-2-ws-tests.txt
Rust/.sisyphus/notepads/jsonl-persistence/: decisions.md  issues.md  learnings.md  problems.md
Rust/.sisyphus/notepads/persist-bugfix/: learnings.md
Rust/.sisyphus/notepads/rust-hardening/: decisions.md  learnings.md  qa-results.md
Rust/.sisyphus/plans/: jsonl-persistence.md  rust-hardening.md
Rust/.sisyphus/run-continuation/: ses_1ba9174f3ffeurYISusotIjxmL.json
Rust/data/: DecentFashionCNN_20260521_174911.jsonl
Rust/example_client/: train_monitored.py
Rust/src/: config.rs  ingest.rs  lib.rs  main.rs  models.rs  persist.rs  store.rs  ws.rs
Rust/src/routes/: health.rs  metrics.rs  mod.rs  runs.rs  ws_route.rs
Rust/static/: app.js  index.html  styles.css
Rust/tests/: test_edge_cases.rs  test_error_responses.rs  test_metrics_endpoint.rs  test_runs_endpoint.rs  test_storage.rs  test_websocket.rs
Rust/tests/common/: mod.rs
(+59 files in other folders)
