[package]
name = "nn_monitor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "timeout", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
envy = "0.4"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
hashbrown = "0.15"

[dev-dependencies]
axum-test = "17"
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
